add grouped_as for inputs, add more doc and examples.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "magic-regexp"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 authors = ["Peter Heiss <peter.heiss@uni-muenster.de"]
 description = "A library for creating regular expressions with ease"
 repository = "https://github.com/Heiss/magic-regexp"
 documentation = "https://heiss.github.io/magic-regexp/magic_regexp/index.html"
 license = "MIT"
+keywords = ["regex", "regular expression", "magic", "magic-regexp"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
